sdk/go/auto/test/errors/compilation_error/dotnet/MyStack.cs
using Pulumi;

class MyStack : Stack
{
    public MyStack()
    {
        // Add your resources here
        will not compile
    }
}
